tests/baselines/reference/asyncFunctionExpression9.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts(6,27): error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts(6,37): error TS1109: Expression expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts(6,40): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts(6,45): error TS1005: ';' expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts(6,46): error TS1128: Declaration or statement expected.
tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts(6,60): error TS1109: Expression expected.


==== tests/cases/conformance/async/downlevel/asyncFunctionExpression/asyncFunctionExpression9.ts (6 errors) ====
    declare class Promise<T> {
        constructor(init: (resolve: (value?: T | IPromise<T>) => void, reject: (reason?: any) => void) => void);
        then<TResult>(onfulfilled?: (value: T) => TResult | IPromise<TResult>, onrejected?: (reason: any) => TResult | IPromise<TResult>): Promise<TResult>;
    }
    
    var foo = async function (a = await => await): Promise<void> {
                              ~~~~~~~~~
!!! error TS2371: A parameter initializer is only allowed in a function or constructor implementation.
                                        ~~
!!! error TS1109: Expression expected.
                                           ~~~~~
!!! error TS2304: Cannot find name 'await'.
                                                ~
!!! error TS1005: ';' expected.
                                                 ~
!!! error TS1128: Declaration or statement expected.
                                                               ~
!!! error TS1109: Expression expected.
    }